--- a/apps/voiceapps/display_pages/pages/commands_list.html
+++ b/apps/voiceapps/display_pages/pages/commands_list.html
@@ -14,13 +14,13 @@
 	<body>
 		<h1>"Mirror, Mirror on the wall?"</h1>
 		<h2>Checkout the voice commands below!</h2></br>
-		
+
 		<p1>
-			<div1>1. "Give me office hours for &lt Professor &gt ."</br></div1>
-			<div1>2. "What is the next Pizza My Mind?"</br></div1>
-			<div1>3. "Where is room &lt room# &gt ."</br></div1>
+			<div1>1. "Give me office hours for &lt Professor &gt ."</br>
+			2. "What is the next Pizza My Mind?"</br>
+			3. "Where is room &lt room# &gt ."</br></div>
 		</p1>
-		
+
 		<div class="footer">Linux Users Group, 2018</div>
 	</body>
 </html>
